dvisvgm-3.0.2 (2023-01-30)
- fixed computation of font sizes in new PDF handler (GH issue #220)
- fixed viewBox coordinates determined by new PDF handler (GH issue #223)
- improved detection of font names used in PDF files (GH issue #224)
- minor code improvements	

dvisvgm-3.0.1 (2023-01-10)
- added support for the 64-bit GS library in TeX Live
  (patch sent by Akira Kakuto)
- MacTeX: explicitly lookup libgs in /usr/local/lib (GH issue #197)
- fixed character spacing when processing XDV glyph arrays (GH issue #198)
- fixed invalid removal of non-redundant clipPath elements (GH issue #203)
- fixed computation of the graphics extents printed to the console when using
  the preview package (GH issue #209)
- several improvements of the autotool scripts (thanks to Sam James)
- improved processing of fonts when using the new PDF handler

dvisvgm-3.0 (2022-10-16)
- added new PDF handler based on mutool to keep the PDF functionality available
  which can't no longer be realized with as of Ghostscript 10.1.0 due to the
  replacement of its PDF interpreter
- replaced the bundled minimal Fontforge library (ff-woff) with a dedicated,
  newly implemented library for embedding TTF/WOFF data into the SVG files
- added option --embed-bitmaps to embed bitmaps into the generated SVG files
  instead of referencing the external files
- exteded option --tmpdir to optionally suppress the creation of uniquely
  named subfolders
- added filters :even and :odd to option --page to limit the given page ranges
  to even and odd page numbers respectively
- fixed the call of ttfautohint to prevent potential memory errors

dvisvgm-2.14 (2022-08-12)
- added processing of SVG path elements inserted by "raw" specials in order to
  treat them similar to generated ones
- added support for native font references lacking a file name suffix
- improved lookup of native fonts
- improved the removal of redundant SVG group elements
- fixed conversion of empty glyphs to TTF/WOFF