@@ -21,6 +21,8 @@
 #ifndef BASICDVIREADER_HPP
 #define BASICDVIREADER_HPP
 
+#include <cstdint>
+
 #include "Matrix.hpp"
 #include "MessageException.hpp"
 #include "StreamReader.hpp"
