@@ -21,6 +21,7 @@
 #ifndef BITMAP_HPP
 #define BITMAP_HPP
 
+#include <cstdint>
 #include <ostream>
 #include <vector>
 
