@@ -21,6 +21,7 @@
 #ifndef COLOR_HPP
 #define COLOR_HPP
 
+#include <cstdint>
 #include <string>
 #include <valarray>
 #include <vector>
