@@ -21,6 +21,7 @@
 #ifndef DVIREADER_HPP
 #define DVIREADER_HPP
 
+#include <cstdint>
 #include <limits>
 #include <map>
 #include <stack>
