@@ -21,6 +21,7 @@
 #ifndef FILESYSTEM_HPP
 #define FILESYSTEM_HPP
 
+#include <cstdint>
 #include <string>
 #include <vector>
 
