@@ -22,6 +22,7 @@
 #define INPUTBUFFER_HPP
 
 #include <algorithm>
+#include <cstdint>
 #include <cstring>
 #include <istream>
 #include <string>
