@@ -22,6 +22,7 @@
 #define RANGEMAP_HPP
 
 #include <algorithm>
+#include <cstdint>
 #include <ostream>
 #include <vector>
 
